# notebooks-school-base

./: Dockerfile  Dockerfile_build  README.md  build_docker.sh  docker-compose-nomount.yml  docker-compose.yml  jupyter_notebook_config.py  requirements.txt
.github/workflows/: docker-image.yml
modules/: pyproject.toml
modules/tnamodules/: tunnel.py
notebooks/: settings.ipynb
scripts/: tunnel
