[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tnamodules"
version = "0.0.1"
authors = [
  { name="L.M.H.", email="dev@hilberg.eu" },
]
description = "Opening tcp tunnel"
requires-python = ">=3.8"
dependencies = [
    "quickflare@git+https://github.com/tna76874/quickflare.git@075b50a6bfcfaa5096efcf65f80a037bbb301639",
    "ipython",
    "psutil",
    "qrcode",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tna76874/notebooks-school-base"